Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Order__c/Re_Plastic_Innovations_Order__c.object-meta.xml
<CustomObject>
    <label>Re Plastic Innovations Order</label>
    <nameField>
        <displayFormat>RPIPW-{0000}</displayFormat>
        <label>Re Plastic Innovations Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re Plastic Innovations Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>