Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery_Date</label>
    <type>Date</type>
</CustomField>