Salesforce-Metadata/force-app/main/default/objects/Re_Plastic_Innovations_Order__c/fields/Re_Plastic_Innovations_Recycled_Product__c.field-meta.xml
<CustomField>
    <fullName>Re_Plastic_Innovations_Recycled_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re Plastic Innovations Recycled Product</label>
    <referenceTo>Re_Plastic_Innovations_Recycled_Product__c</referenceTo>
    <relationshipLabel>Re Plastic Innovations Orders</relationshipLabel>
    <relationshipName>Re_Plastic_Innovations_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>